# enelvo

./: .gitignore  .travis.yml  LICENSE  MANIFEST  Makefile  README.md  _config.yml  contato.md  example.py  in.txt  index.html  norm_lexicon.pickle  out.txt  pesquisadores.md  publicacoes.md  pyproject.toml  recursos.md  requirements.txt  resultados-baselines-scoring.txt  resultados-baselines.txt  setup.py  setup_cython.py  sobre.md  test.py  tweets-test-labels.txt  tweets-test.txt
.github/workflows/: constraints.txt  release.yml  tests.yaml
_includes/: head.html  sidebar.html
_layouts/: default.html
_posts/: 2017-12-4-oprojeto.md
_site/: 404.html  atom.xml  index.html
_site/contato/: index.html
_site/pesquisadores/: index.html
_site/publicacoes/: index.html
_site/recursos/: index.html
_site/sobre/: index.html
correcoes-enelvo/: AB-corr-enelvo.txt  ES-corr-enelvo.txt  IN-corr-enelvo.txt  Ja-Corrigido-corr-enelvo.txt  Lixo-corr-enelvo.txt  NP-corr-enelvo.txt  O-corr-enelvo.txt  OC-corr-enelvo.txt  OLD-correcoes-todas-formato-full.txt  SC-corr-enelvo.txt  SI-corr-enelvo.txt  correcoes-todas-formato-full.txt  corrs_todos.txt  ruidos-corr-enelvo.txt  test-oc-com-id.txt  test-oc.txt
enelvo/: __init__.py  __main__.py  analytics.py  log.py  metrics.py  normaliser.py  run.py  sanitize.txt
enelvo.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
enelvo/candidate_generation/: __init__.py  baselines.py  embeddings.py
enelvo/candidate_scoring/: __init__.py  baselines.py  embeddings.py
enelvo/metrics/: cythonlcs.c  cythonlcs.pyx  metrics.py
enelvo/preprocessing/: __init__.py  preprocessing.py
enelvo/tokenizer/: test_tweetokenize.py
enelvo/utils/: __init__.py  evaluation.py  loaders.py
pages/: _config.yml  contato.md  index.html  sobre.md
pages/_includes/: sidebar.html
pages/_layouts/: page.html
pages/_posts/: 2016-06-26-oprojeto.md
resources/lexicons/: ABOUT  (+2 more)
test-ugnormal/: labels_ugc_AB.txt  labels_ugc_ES.txt  labels_ugc_IN.txt  labels_ugc_NP.txt  labels_ugc_O.txt  labels_ugc_OC.txt  labels_ugc_SI.txt  test_ugc_AB.txt  test_ugc_ES.txt  test_ugc_IN.txt  test_ugc_NP.txt  test_ugc_O.txt  test_ugc_OC.txt  test_ugc_SI.txt
tests/: test_metrics.py  test_normaliser.py
(+28 files in other folders)
