[tool.poetry]
name = "enelvo"
version = "v0.0.0"
description = "A flexible normalizer for user-generated content http://thalesbertaglia.com/enelvo"
authors = ["Thales Bertaglia <contact@thalesbertaglia.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/thalesbertaglia/enelvo"
homepage = "https://github.com/thalesbertaglia/enelvo"
packages = [
    {include = "enelvo"}
]

[tool.poetry.dependencies]
python = "^3.6"
editdistance = "0.5.3"
numpy = "1.19.5"
gensim = "4.0.1"
tabulate = "0.8.9"
emoji = "1.2.0"

[tool.poetry.dev-dependencies]
coveralls = "^3.0.1"
pytest-cov = "^2.11.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
