[tool.poetry]
name = "enelvo"
version = "v0.0.0"
description = "A flexible normalizer for user-generated content http://thalesbertaglia.com/enelvo"
authors = ["Thales Bertaglia <contact@thalesbertaglia.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/thalesbertaglia/enelvo"
homepage = "https://github.com/thalesbertaglia/enelvo"
packages = [
    {include = "enelvo"}
]

[tool.poetry.dependencies]
python = ">=3.6"
editdistance = ">=0.6.0"
numpy = ">=1.19.5"
gensim = ">=4.1.2"
tabulate = ">=0.8.9"
emoji = "2.2.0"

[tool.poetry.dev-dependencies]
coveralls = ">=3.3.1"
pytest-cov = ">=3.0.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
